--- a/assets/responsive/_responsive.scss
+++ b/assets/responsive/_responsive.scss
@@ -1,7 +1,7 @@
-@media screen and(max-width :1440px) {
+@media (max-width :1440px) {
   /* ======================= GLOBAL ======================= */
 
-  body {
+
     h1 {
       font-size: 600%;
     }
@@ -266,4 +266,4 @@
       width: 100%;
     }
   }
-}
+
