--- a/style.scss
+++ b/style.scss
@@ -1,9 +1,8 @@
 @import "./assets/mixins/mixins";
 @import "./assets/variables/variables";
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css");
-@import "./assets/responsive/responsive";
 
-/* ======================= GLOBAL ======================= */
+/* ======================= GLOBAL */
 
 body {
   background-color: white;
@@ -53,11 +52,9 @@ p {
   font-size: 110%;
 }
 
-/* =========================================================================================== */
-/* ========================================= ACCUEIL ========================================= */
-/* =========================================================================================== */
+/* =============================================================== ACCUEIL =============================================================== */
 
-/* ======================= NAVBAR ======================= */
+/* ======================= NAVBAR */
 
 nav .row {
   align-items: center;
@@ -78,7 +75,7 @@ nav .row {
   }
 }
 
-/* ======================= SECTION 1-0 ======================= */
+/* ======================= SECTION 1-0 */
 
 .section1-0-photo {
   height: 100vh;
@@ -109,7 +106,7 @@ nav .row {
   }
 }
 
-/* ======================= SECTION 1-1 ======================= */
+/* ======================= SECTION 1-1 */
 
 .section1-1 {
   margin: 30px 100px;
@@ -168,7 +165,7 @@ nav .row {
   }
 }
 
-/* ======================= SECTION 1-2 ======================= */
+/* ======================= SECTION 1-2 */
 
 .section1-2 {
   margin: 30px 150px;
@@ -206,7 +203,7 @@ nav .row {
   }
 }
 
-/* ======================= SECTION 1-3 ======================= */
+/* ======================= SECTION 1-3 */
 
 .section1-3,
 footer {
@@ -222,7 +219,7 @@ footer {
   }
 }
 
-/* ======================= FOOTER ======================= */
+/* ======================= FOOTER */
 
 .footer-content {
   padding: 100px 100px 0 100px;
@@ -242,11 +239,9 @@ footer {
   }
 }
 
-/* ================================================================================================
-========================================= ABOUT TTHE FARM =========================================
-================================================================================================ */
+/* =============================================================== ABOUT-THE-FARM =============================================================== */
 
-/* ======================= SECTION 2-0 ======================= */
+/* ======================= SECTION 2-0 */
 
 .section2-0 {
   margin: 55px;
@@ -271,7 +266,7 @@ footer {
   }
 }
 
-/* ======================= SECTION 2-1 ======================= */
+/* ======================= SECTION 2-1 */
 
 .section2-1-content {
   display: flex;
@@ -297,7 +292,7 @@ footer {
   }
 }
 
-/* ======================= SECTION 2-2 ======================= */
+/* ======================= SECTION 2-2 */
 
 .section2-2 {
   margin: 80px 55px;
@@ -323,11 +318,9 @@ footer {
   }
 }
 
-/* ==============================================================================================
-========================================= SHOP PRODUCTS =========================================
-============================================================================================== */
+/* =============================================================== SHOP-PRODUCTS =============================================================== */
 
-/* ======================= SECTION 3-0 ======================= */
+/* ======================= SECTION 3-0 */
 
 .section3-0 .row {
   margin-bottom: 80px;
@@ -362,11 +355,9 @@ footer {
   color: white;
 }
 
-/* ====================================================================================
-========================================= FAQ =========================================
-==================================================================================== */
+/* =============================================================== FAQ =============================================================== */
 
-/* ======================= SECTION 4-0 ======================= */
+/* ======================= SECTION 4-0 */
 
 .section4-0 {
   margin: 55px;
@@ -420,11 +411,9 @@ footer {
   }
 }
 
-/* ==========================================================================================
-========================================= SAY HELLO =========================================
-========================================================================================== */
+/* =============================================================== SAY-HELLO =============================================================== */
 
-/* ======================= SECTION 5-0 ======================= */
+/* ======================= SECTION 5-0 */
 
 .section5-0 {
   margin: 55px;
@@ -445,7 +434,7 @@ footer {
 .section5-0-formulaire {
   padding: 30px 0;
   width: 80%;
-  
+
   label {
     width: 100%;
     text-align: left;
@@ -489,7 +478,7 @@ footer {
   margin: 50px 0;
 }
 
-/* ======================= SECTION 5-1 ======================= */
+/* ======================= SECTION 5-1 */
 
 .section5-1 {
   margin: 200px 0;
@@ -507,8 +496,270 @@ footer {
   }
 }
 
-/* ======================= SECTION 5-2 ======================= */
+/* ======================= SECTION 5-2 */
 
 .section5-2 img {
   width: 100%;
+}
+
+/* ========================================================================================================================================== */
+/* =============================================================== RESPONSIVE =============================================================== */
+/* ========================================================================================================================================== */
+
+@media (max-width: 1580px) {
+  /* ======================= GLOBAL */
+
+  h1 {
+    font-size: 600%;
+  }
+
+  h2 {
+    font-size: 200%;
+  }
+
+  h3 {
+    font-size: 150%;
+  }
+
+  h4 {
+    font-size: 140%;
+  }
+
+  h5 {
+    font-size: 120%;
+  }
+
+  h6 {
+    font-size: 70%;
+  }
+
+  p {
+    font-size: 100%;
+  }
+
+  /* =============================================================== R-ACCUEIL =============================================================== */
+
+  /* ======================= NAVBAR */
+
+  .logo-nav {
+    text-align: left;
+
+    img {
+      width: 50%;
+    }
+  }
+
+  nav {
+    text-align: center;
+
+    .menus-nav a {
+      font-size: 100%;
+    }
+  }
+
+  /* ======================= SECTION 1-1 */
+
+  .section1-1 {
+    margin: 30px 50px;
+  }
+
+  .section1-1-photo {
+    height: 80vh;
+  }
+
+  .section1-1-titres {
+    padding: 40px 20px;
+  }
+
+  .section1-1-middle {
+    width: 80%;
+    gap: 40px;
+
+    .btn {
+      padding: 10px 20px;
+    }
+
+    .section1-1-logo-middle {
+      right: -30px;
+      top: -90px;
+
+      img {
+        width: 80%;
+      }
+    }
+  }
+
+  /* ======================= SECTION 1-2 */
+
+  .section1-2 {
+    margin: 30px 100px;
+  }
+
+  .section1-2-content {
+    gap: 10px;
+    padding-top: 100px;
+
+    p {
+      width: 80%;
+    }
+
+    .separation2 {
+      margin: 20px 0;
+      font-size: 120%;
+    }
+  }
+
+  /* ======================= SECTION 1-3 */
+
+  .section1-3,
+  footer {
+    padding: 20px;
+  }
+
+  .section1-3-photos,
+  .footer-content {
+    padding: 20px;
+    text-align: center;
+
+    img {
+      width: 90%;
+    }
+  }
+
+  /* ======================= FOOTER */
+
+  .footer-content {
+    padding: 50px 50px 0 50px;
+  }
+
+  /* =============================================================== R-ABOUT-THE-FARM =============================================================== */
+
+  /* ======================= SECTION 2-0 */
+
+  .section2-0 {
+    margin: 50px;
+
+    .section2-0-content {
+      gap: 20px;
+    }
+  }
+
+  /* ======================= SECTION 2-1 */
+
+  .section2-1-content {
+    gap: 20px;
+
+    h2 {
+      margin-bottom: 30px;
+    }
+
+    a {
+      margin-top: 30px;
+    }
+
+    .btn {
+      padding: 10px 20px;
+    }
+  }
+
+  /* ======================= SECTION 2-2 */
+
+  .section2-2 {
+    margin: 50px;
+
+    .section2-2-content {
+      gap: 10px;
+    }
+
+    p,
+    h2 {
+      margin-top: 20px;
+    }
+  }
+
+  /* =============================================================== R-SHOP-PRODUCTS =============================================================== */
+
+  /* ======================= SECTION 3-0 */
+
+  .section3-0 .row {
+    margin-bottom: 40px;
+
+    .row > * {
+      padding: 0 20px;
+    }
+  }
+
+  .section3-0-titre {
+    margin: 50px 0;
+  }
+
+  /* =============================================================== R-FAQ =============================================================== */
+
+  /* ======================= SECTION 4-0 */
+
+  .section4-0 {
+    margin: 50px;
+  }
+
+  .accordion {
+    width: 70%;
+  }
+
+  /* =============================================================== R-SAY-HELLO =============================================================== */
+
+  /* ======================= SECTION 5-0 */
+
+  .section5-0 {
+    margin: 55px;
+
+    img {
+      width: 100%;
+    }
+  }
+
+  .section5-0-formulaire {
+    padding: 10px 0;
+    width: 80%;
+
+    .btn {
+      padding: 10px 20px;
+    }
+
+    .g-3 {
+      gap: 10px;
+    }
+  }
+
+  .section5-0-form-titre .row {
+    gap: 5px;
+    margin: 20px 0;
+
+    .section5-middle {
+      height: 60px;
+    }
+  }
+
+  .section5-0-email {
+    margin: 40px 0;
+  }
+
+  /* ======================= SECTION 5-1 */
+
+  .section5-1 {
+    margin: 100px 0;
+  }
+
+  .section5-1 .row {
+    margin: 20px 0;
+
+    .section5-middle {
+      height: 60px;
+    }
+  }
+
+  /* ======================= SECTION 5-2 */
+
+  .section5-2 img {
+    width: 100%;
+  }
 }
