--- a/style.css
+++ b/style.css
@@ -1,206 +1,5 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css");
-@media screen and (max-width: 1440px) {
-  /* ======================= GLOBAL ======================= */
-  body {
-    /* =========================================================================================== */
-    /* ========================================= ACCUEIL ========================================= */
-    /* =========================================================================================== */
-    /* ======================= NAVBAR ======================= */
-    /* ======================= SECTION 1-1 ======================= */
-    /* ======================= SECTION 1-2 ======================= */
-    /* ======================= SECTION 1-3 ======================= */
-    /* ======================= FOOTER ======================= */
-    /* ================================================================================================
-    ========================================= ABOUT TTHE FARM =========================================
-    ================================================================================================ */
-    /* ======================= SECTION 2-0 ======================= */
-    /* ======================= SECTION 2-1 ======================= */
-    /* ======================= SECTION 2-2 ======================= */
-    /* ==============================================================================================
-    ========================================= SHOP PRODUCTS =========================================
-    ============================================================================================== */
-    /* ======================= SECTION 3-0 ======================= */
-    /* ====================================================================================
-    ========================================= FAQ =========================================
-    ==================================================================================== */
-    /* ======================= SECTION 4-0 ======================= */
-    /* ==========================================================================================
-    ========================================= SAY HELLO =========================================
-    ========================================================================================== */
-    /* ======================= SECTION 5-0 ======================= */
-    /* ======================= SECTION 5-1 ======================= */
-    /* ======================= SECTION 5-2 ======================= */
-  }
-  body h1 {
-    font-size: 600%;
-  }
-  body h2 {
-    font-size: 200%;
-  }
-  body h3 {
-    font-size: 150%;
-  }
-  body h4 {
-    font-size: 140%;
-  }
-  body h5 {
-    font-size: 120%;
-  }
-  body h6 {
-    font-size: 70%;
-  }
-  body p {
-    font-size: 100%;
-  }
-  body .logo-nav {
-    text-align: left;
-  }
-  body .logo-nav img {
-    width: 50%;
-  }
-  body nav {
-    text-align: center;
-  }
-  body nav .menus-nav a {
-    font-size: 100%;
-  }
-  body .section1-1 {
-    margin: 30px 50px;
-  }
-  body .section1-1-photo {
-    height: 80vh;
-  }
-  body .section1-1-titres {
-    padding: 40px 20px;
-  }
-  body .section1-1-middle {
-    width: 80%;
-    gap: 40px;
-  }
-  body .section1-1-middle .btn {
-    padding: 10px 20px;
-  }
-  body .section1-1-middle .section1-1-logo-middle {
-    right: -30px;
-    top: -90px;
-  }
-  body .section1-1-middle .section1-1-logo-middle img {
-    width: 80%;
-  }
-  body .section1-2 {
-    margin: 30px 100px;
-  }
-  body .section1-2-content {
-    gap: 10px;
-    padding-top: 100px;
-  }
-  body .section1-2-content p {
-    width: 80%;
-  }
-  body .section1-2-content .separation2 {
-    margin: 20px 0;
-    font-size: 120%;
-  }
-  body .section1-3,
-  body footer {
-    padding: 20px;
-  }
-  body .section1-3-photos,
-  body .footer-content {
-    padding: 20px;
-    text-align: center;
-  }
-  body .section1-3-photos img,
-  body .footer-content img {
-    width: 90%;
-  }
-  body .footer-content {
-    padding: 50px 50px 0 50px;
-  }
-  body .section2-0 {
-    margin: 50px;
-  }
-  body .section2-0 .section2-0-content {
-    gap: 20px;
-  }
-  body .section2-1-content {
-    gap: 20px;
-  }
-  body .section2-1-content h2 {
-    margin-bottom: 30px;
-  }
-  body .section2-1-content a {
-    margin-top: 30px;
-  }
-  body .section2-1-content .btn {
-    padding: 10px 20px;
-  }
-  body .section2-2 {
-    margin: 50px;
-  }
-  body .section2-2 .section2-2-content {
-    gap: 10px;
-  }
-  body .section2-2 p,
-  body .section2-2 h2 {
-    margin-top: 20px;
-  }
-  body .section3-0 .row {
-    margin-bottom: 40px;
-  }
-  body .section3-0 .row .row > * {
-    padding: 0 20px;
-  }
-  body .section3-0-titre {
-    margin: 50px 0;
-  }
-  body .section4-0 {
-    margin: 50px;
-  }
-  body .accordion {
-    width: 70%;
-  }
-  body .section5-0 {
-    margin: 55px;
-  }
-  body .section5-0 img {
-    width: 100%;
-  }
-  body .section5-0-formulaire {
-    padding: 10px 0;
-    width: 80%;
-  }
-  body .section5-0-formulaire .btn {
-    padding: 10px 20px;
-  }
-  body .section5-0-formulaire .g-3 {
-    gap: 10px;
-  }
-  body .section5-0-form-titre .row {
-    gap: 5px;
-    margin: 20px 0;
-  }
-  body .section5-0-form-titre .row .section5-middle {
-    height: 60px;
-  }
-  body .section5-0-email {
-    margin: 40px 0;
-  }
-  body .section5-1 {
-    margin: 100px 0;
-  }
-  body .section5-1 .row {
-    margin: 20px 0;
-  }
-  body .section5-1 .row .section5-middle {
-    height: 60px;
-  }
-  body .section5-2 img {
-    width: 100%;
-  }
-}
-
-/* ======================= GLOBAL ======================= */
+/* ======================= GLOBAL */
 body {
   background-color: white;
   font-family: "Roboto", sans-serif;
@@ -249,10 +48,8 @@ p {
   font-size: 110%;
 }
 
-/* =========================================================================================== */
-/* ========================================= ACCUEIL ========================================= */
-/* =========================================================================================== */
-/* ======================= NAVBAR ======================= */
+/* =============================================================== ACCUEIL =============================================================== */
+/* ======================= NAVBAR */
 nav .row {
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -274,7 +71,7 @@ nav .row {
   color: #ffb84e;
 }
 
-/* ======================= SECTION 1-0 ======================= */
+/* ======================= SECTION 1-0 */
 .section1-0-photo {
   height: 100vh;
   display: -webkit-box;
@@ -317,7 +114,7 @@ nav .row {
   content: "";
 }
 
-/* ======================= SECTION 1-1 ======================= */
+/* ======================= SECTION 1-1 */
 .section1-1 {
   margin: 30px 100px;
 }
@@ -404,7 +201,7 @@ nav .row {
   line-height: 180%;
 }
 
-/* ======================= SECTION 1-2 ======================= */
+/* ======================= SECTION 1-2 */
 .section1-2 {
   margin: 30px 150px;
   text-align: center;
@@ -453,7 +250,7 @@ nav .row {
   opacity: 0.6;
 }
 
-/* ======================= SECTION 1-3 ======================= */
+/* ======================= SECTION 1-3 */
 .section1-3,
 footer {
   padding: 20px;
@@ -469,7 +266,7 @@ footer {
   width: 100%;
 }
 
-/* ======================= FOOTER ======================= */
+/* ======================= FOOTER */
 .footer-content {
   padding: 100px 100px 0 100px;
 }
@@ -488,10 +285,8 @@ footer {
   color: #325b5b;
 }
 
-/* ================================================================================================
-========================================= ABOUT TTHE FARM =========================================
-================================================================================================ */
-/* ======================= SECTION 2-0 ======================= */
+/* =============================================================== ABOUT-THE-FARM =============================================================== */
+/* ======================= SECTION 2-0 */
 .section2-0 {
   margin: 55px;
 }
@@ -526,7 +321,7 @@ footer {
   width: 100%;
 }
 
-/* ======================= SECTION 2-1 ======================= */
+/* ======================= SECTION 2-1 */
 .section2-1-content {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -572,7 +367,7 @@ footer {
   background-color: #325b5b;
 }
 
-/* ======================= SECTION 2-2 ======================= */
+/* ======================= SECTION 2-2 */
 .section2-2 {
   margin: 80px 55px;
 }
@@ -608,10 +403,8 @@ footer {
   width: 100%;
 }
 
-/* ==============================================================================================
-========================================= SHOP PRODUCTS =========================================
-============================================================================================== */
-/* ======================= SECTION 3-0 ======================= */
+/* =============================================================== SHOP-PRODUCTS =============================================================== */
+/* ======================= SECTION 3-0 */
 .section3-0 .row {
   margin-bottom: 80px;
 }
@@ -645,10 +438,8 @@ footer {
   color: white;
 }
 
-/* ====================================================================================
-========================================= FAQ =========================================
-==================================================================================== */
-/* ======================= SECTION 4-0 ======================= */
+/* =============================================================== FAQ =============================================================== */
+/* ======================= SECTION 4-0 */
 .section4-0 {
   margin: 55px;
 }
@@ -711,10 +502,8 @@ footer {
   background-color: #ffb84e;
 }
 
-/* ==========================================================================================
-========================================= SAY HELLO =========================================
-========================================================================================== */
-/* ======================= SECTION 5-0 ======================= */
+/* =============================================================== SAY-HELLO =============================================================== */
+/* ======================= SECTION 5-0 */
 .section5-0 {
   margin: 55px;
 }
@@ -804,7 +593,7 @@ footer {
   margin: 50px 0;
 }
 
-/* ======================= SECTION 5-1 ======================= */
+/* ======================= SECTION 5-1 */
 .section5-1 {
   margin: 200px 0;
 }
@@ -826,8 +615,200 @@ footer {
   border-right: 2px solid #325b5b;
 }
 
-/* ======================= SECTION 5-2 ======================= */
+/* ======================= SECTION 5-2 */
 .section5-2 img {
   width: 100%;
+}
+
+/* ========================================================================================================================================== */
+/* =============================================================== RESPONSIVE =============================================================== */
+/* ========================================================================================================================================== */
+@media (max-width: 1580px) {
+  /* ======================= GLOBAL */
+  h1 {
+    font-size: 600%;
+  }
+  h2 {
+    font-size: 200%;
+  }
+  h3 {
+    font-size: 150%;
+  }
+  h4 {
+    font-size: 140%;
+  }
+  h5 {
+    font-size: 120%;
+  }
+  h6 {
+    font-size: 70%;
+  }
+  p {
+    font-size: 100%;
+  }
+  /* =============================================================== R-ACCUEIL =============================================================== */
+  /* ======================= NAVBAR */
+  .logo-nav {
+    text-align: left;
+  }
+  .logo-nav img {
+    width: 50%;
+  }
+  nav {
+    text-align: center;
+  }
+  nav .menus-nav a {
+    font-size: 100%;
+  }
+  /* ======================= SECTION 1-1 */
+  .section1-1 {
+    margin: 30px 50px;
+  }
+  .section1-1-photo {
+    height: 80vh;
+  }
+  .section1-1-titres {
+    padding: 40px 20px;
+  }
+  .section1-1-middle {
+    width: 80%;
+    gap: 40px;
+  }
+  .section1-1-middle .btn {
+    padding: 10px 20px;
+  }
+  .section1-1-middle .section1-1-logo-middle {
+    right: -30px;
+    top: -90px;
+  }
+  .section1-1-middle .section1-1-logo-middle img {
+    width: 80%;
+  }
+  /* ======================= SECTION 1-2 */
+  .section1-2 {
+    margin: 30px 100px;
+  }
+  .section1-2-content {
+    gap: 10px;
+    padding-top: 100px;
+  }
+  .section1-2-content p {
+    width: 80%;
+  }
+  .section1-2-content .separation2 {
+    margin: 20px 0;
+    font-size: 120%;
+  }
+  /* ======================= SECTION 1-3 */
+  .section1-3,
+  footer {
+    padding: 20px;
+  }
+  .section1-3-photos,
+  .footer-content {
+    padding: 20px;
+    text-align: center;
+  }
+  .section1-3-photos img,
+  .footer-content img {
+    width: 90%;
+  }
+  /* ======================= FOOTER */
+  .footer-content {
+    padding: 50px 50px 0 50px;
+  }
+  /* =============================================================== R-ABOUT-THE-FARM =============================================================== */
+  /* ======================= SECTION 2-0 */
+  .section2-0 {
+    margin: 50px;
+  }
+  .section2-0 .section2-0-content {
+    gap: 20px;
+  }
+  /* ======================= SECTION 2-1 */
+  .section2-1-content {
+    gap: 20px;
+  }
+  .section2-1-content h2 {
+    margin-bottom: 30px;
+  }
+  .section2-1-content a {
+    margin-top: 30px;
+  }
+  .section2-1-content .btn {
+    padding: 10px 20px;
+  }
+  /* ======================= SECTION 2-2 */
+  .section2-2 {
+    margin: 50px;
+  }
+  .section2-2 .section2-2-content {
+    gap: 10px;
+  }
+  .section2-2 p,
+  .section2-2 h2 {
+    margin-top: 20px;
+  }
+  /* =============================================================== R-SHOP-PRODUCTS =============================================================== */
+  /* ======================= SECTION 3-0 */
+  .section3-0 .row {
+    margin-bottom: 40px;
+  }
+  .section3-0 .row .row > * {
+    padding: 0 20px;
+  }
+  .section3-0-titre {
+    margin: 50px 0;
+  }
+  /* =============================================================== R-FAQ =============================================================== */
+  /* ======================= SECTION 4-0 */
+  .section4-0 {
+    margin: 50px;
+  }
+  .accordion {
+    width: 70%;
+  }
+  /* =============================================================== R-SAY-HELLO =============================================================== */
+  /* ======================= SECTION 5-0 */
+  .section5-0 {
+    margin: 55px;
+  }
+  .section5-0 img {
+    width: 100%;
+  }
+  .section5-0-formulaire {
+    padding: 10px 0;
+    width: 80%;
+  }
+  .section5-0-formulaire .btn {
+    padding: 10px 20px;
+  }
+  .section5-0-formulaire .g-3 {
+    gap: 10px;
+  }
+  .section5-0-form-titre .row {
+    gap: 5px;
+    margin: 20px 0;
+  }
+  .section5-0-form-titre .row .section5-middle {
+    height: 60px;
+  }
+  .section5-0-email {
+    margin: 40px 0;
+  }
+  /* ======================= SECTION 5-1 */
+  .section5-1 {
+    margin: 100px 0;
+  }
+  .section5-1 .row {
+    margin: 20px 0;
+  }
+  .section5-1 .row .section5-middle {
+    height: 60px;
+  }
+  /* ======================= SECTION 5-2 */
+  .section5-2 img {
+    width: 100%;
+  }
 }
 /*# sourceMappingURL=style.css.map */
