--- a/style.css
+++ b/style.css
@@ -71,6 +71,10 @@ nav .row {
   color: #ffb84e;
 }
 
+.hamburger {
+  display: none;
+}
+
 /* ======================= SECTION 1-0 */
 .section1-0-photo {
   height: 100vh;
@@ -406,11 +410,7 @@ footer {
 /* =============================================================== SHOP-PRODUCTS =============================================================== */
 /* ======================= SECTION 3-0 */
 .section3-0 .row {
-  margin-bottom: 80px;
-}
-
-.section3-0 .row .row > * {
-  padding: 0 30px;
+  padding: 100px;
 }
 
 .section3-0-titre {
@@ -423,7 +423,9 @@ footer {
 }
 
 .section3-0-content {
+  margin: 0 auto;
   text-align: center;
+  width: 60%;
 }
 
 .section3-0-content img {
@@ -444,12 +446,34 @@ footer {
   margin: 55px;
 }
 
+.section4-0 .section4-0-content {
+  padding: 0;
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+}
+
+.section4-0 img {
+  width: 100%;
+}
+
 .accordion {
   width: 50%;
 }
 
 .section4-0-content {
-  background: #325b5b;
   padding: 0;
   margin: 0;
   display: -webkit-box;
@@ -471,10 +495,6 @@ footer {
 .section4-0-content h2,
 .section4-0-content h4 {
   color: white;
-}
-
-.section4-0-content img {
-  width: 100%;
 }
 
 .accordion .accordion-item {
@@ -623,6 +643,9 @@ footer {
 /* ========================================================================================================================================== */
 /* =============================================================== RESPONSIVE =============================================================== */
 /* ========================================================================================================================================== */
+/* =============================  */
+/* ======================= 1580px */
+/* =============================  */
 @media (max-width: 1580px) {
   /* ======================= GLOBAL */
   h1 {
@@ -752,13 +775,247 @@ footer {
   /* =============================================================== R-SHOP-PRODUCTS =============================================================== */
   /* ======================= SECTION 3-0 */
   .section3-0 .row {
-    margin-bottom: 40px;
+    padding: 50px;
   }
-  .section3-0 .row .row > * {
-    padding: 0 20px;
+  .section3-0-content {
+    width: 80%;
   }
-  .section3-0-titre {
-    margin: 50px 0;
+  /* =============================================================== R-FAQ =============================================================== */
+  /* ======================= SECTION 4-0 */
+  .section4-0 {
+    margin: 50px;
+  }
+  .accordion {
+    width: 70%;
+  }
+  /* =============================================================== R-SAY-HELLO =============================================================== */
+  /* ======================= SECTION 5-0 */
+  .section5-0 {
+    margin: 55px;
+  }
+  .section5-0 img {
+    width: 100%;
+  }
+  .section5-0-formulaire {
+    padding: 10px 0;
+    width: 80%;
+  }
+  .section5-0-formulaire .btn {
+    padding: 10px 20px;
+  }
+  .section5-0-formulaire .g-3 {
+    gap: 10px;
+  }
+  .section5-0-form-titre .row {
+    gap: 5px;
+    margin: 20px 0;
+  }
+  .section5-0-form-titre .row .section5-middle {
+    height: 60px;
+  }
+  .section5-0-email {
+    margin: 40px 0;
+  }
+  /* ======================= SECTION 5-1 */
+  .section5-1 {
+    margin: 100px 0;
+  }
+  .section5-1 .row {
+    margin: 20px 0;
+  }
+  .section5-1 .row .section5-middle {
+    height: 60px;
+  }
+  /* ======================= SECTION 5-2 */
+  .section5-2 img {
+    width: 100%;
+  }
+}
+
+/* ============================  */
+/* ======================= 1130px */
+/* ============================  */
+@media (max-width: 1130px) {
+  /* =============================================================== R-ACCUEIL =============================================================== */
+  /* ======================= NAVBAR */
+  .menus-nav {
+    display: none;
+  }
+  .hamburger {
+    display: block;
+  }
+  .hamburger .btn-primary {
+    background-color: #325b5b;
+    color: white;
+    padding: 15px 30px;
+    border-radius: 0;
+    -webkit-transition: all 1s;
+    transition: all 1s;
+    padding: 8px 20px;
+    border: none;
+  }
+  .hamburger .btn-primary:hover {
+    color: #ffb84e;
+    background-color: white;
+  }
+  .hamburger .offcanvas-body {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+  .hamburger .offcanvas-body a {
+    text-decoration: none;
+  }
+  .hamburger .offcanvas-body a:hover {
+    color: black;
+  }
+}
+
+/* ============================  */
+/* ======================= 768px */
+/* ============================  */
+@media (max-width: 768px) {
+  /* ======================= GLOBAL */
+  h1 {
+    font-size: 600%;
+  }
+  h2 {
+    font-size: 200%;
+  }
+  h3 {
+    font-size: 150%;
+  }
+  h4 {
+    font-size: 140%;
+  }
+  h5 {
+    font-size: 120%;
+  }
+  h6 {
+    font-size: 70%;
+  }
+  p {
+    font-size: 100%;
+  }
+  /* =============================================================== R-ACCUEIL =============================================================== */
+  /* ======================= NAVBAR */
+  .logo-nav {
+    text-align: left;
+  }
+  .logo-nav img {
+    width: 50%;
+  }
+  nav {
+    text-align: center;
+  }
+  nav .menus-nav a {
+    font-size: 100%;
+  }
+  .hamburger {
+    display: block;
+  }
+  /* ======================= SECTION 1-1 */
+  .section1-1 {
+    margin: 30px 50px;
+  }
+  .section1-1-photo {
+    height: 80vh;
+  }
+  .section1-1-titres {
+    padding: 40px 20px;
+  }
+  .section1-1-middle {
+    width: 80%;
+    gap: 40px;
+  }
+  .section1-1-middle .btn {
+    padding: 10px 20px;
+  }
+  .section1-1-middle .section1-1-logo-middle {
+    right: -30px;
+    top: -90px;
+  }
+  .section1-1-middle .section1-1-logo-middle img {
+    width: 80%;
+  }
+  /* ======================= SECTION 1-2 */
+  .section1-2 {
+    margin: 30px 100px;
+  }
+  .section1-2-content {
+    gap: 10px;
+    padding-top: 100px;
+  }
+  .section1-2-content p {
+    width: 80%;
+  }
+  .section1-2-content .separation2 {
+    margin: 20px 0;
+    font-size: 120%;
+  }
+  /* ======================= SECTION 1-3 */
+  .section1-3,
+  footer {
+    padding: 20px;
+  }
+  .section1-3-photos,
+  .footer-content {
+    padding: 20px;
+    text-align: center;
+  }
+  .section1-3-photos img,
+  .footer-content img {
+    width: 90%;
+  }
+  /* ======================= FOOTER */
+  .footer-content {
+    padding: 50px 50px 0 50px;
+  }
+  /* =============================================================== R-ABOUT-THE-FARM =============================================================== */
+  /* ======================= SECTION 2-0 */
+  .section2-0 {
+    margin: 50px;
+  }
+  .section2-0 .section2-0-content {
+    gap: 20px;
+  }
+  /* ======================= SECTION 2-1 */
+  .section2-1-content {
+    gap: 20px;
+  }
+  .section2-1-content h2 {
+    margin-bottom: 30px;
+  }
+  .section2-1-content a {
+    margin-top: 30px;
+  }
+  .section2-1-content .btn {
+    padding: 10px 20px;
+  }
+  /* ======================= SECTION 2-2 */
+  .section2-2 {
+    margin: 50px;
+  }
+  .section2-2 .section2-2-content {
+    gap: 10px;
+  }
+  .section2-2 p,
+  .section2-2 h2 {
+    margin-top: 20px;
+  }
+  /* =============================================================== R-SHOP-PRODUCTS =============================================================== */
+  /* ======================= SECTION 3-0 */
+  .section3-0 .row {
+    padding: 50px;
+  }
+  .section3-0-content {
+    width: 80%;
   }
   /* =============================================================== R-FAQ =============================================================== */
   /* ======================= SECTION 4-0 */
